update readme (#115)