@@ -22,12 +22,16 @@ Renames movie and tv show file names to a much nicer format.
 
 ## Local Development
 ### Prerequisites
-- JDK 21 (Amazon Corretto)
+- [JDK 21 (Amazon Corretto)](https://docs.aws.amazon.com/corretto/latest/corretto-21-ug/downloads-list.html)
+- [JavaFX SDK](https://openjfx.io/openjfx-docs/#install-javafx)
+  - then add the modules in your VM options, e.g.
+
+  ```--module-path "C:\Program Files\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml```
 
 ### Setup
 1. Create an account for [themoviedb.org](https://www.themoviedb.org/), and get an API key (currently version 3)
 2. Go to the properties file `/src/main/resources/properties/show-renamer.properties`, and update it with your api key
-3. Run using `mvn clean install javafx:run`
+3. Run using `gradlew run`
 
 ### Helpful Tools
 - [SceneBuilder](https://gluonhq.com/products/scene-builder/) is a fantastic tool to create user interfaces for JavaFX
